# matcher

./: CMakeLists.txt  README.md  build.sh
common/: FeedHandler.h  FileReader.cxx  FileReader.h  LastTradeHandler.h  MarketDataItem.h  OrderBook.cxx  OrderBook.h  Parser.cxx  Parser.h  StatisticsHandler.cxx  StatisticsHandler.h
docs/: background.txt  readme.txt  testOutput.txt
matcher/: CMakeLists.txt  main.cxx
matcher/data/: 10000-summary.txt  10000.txt
tests/: CMakeLists.txt  test.cxx
tests/test01/: CMakeLists.txt  Test01.cxx  Test01.h  simpleSequence.txt
tests/test02/: CMakeLists.txt  Test02.cxx  Test02.h  invalidSequence.txt
tests/test03/: CMakeLists.txt  Test03.cxx  Test03.h  cross.txt  initialSequence.txt  normalTrade.txt  oneTrade.txt  sequence-1.txt  sequence-summary-1.txt  trades.txt
tests/test04/: CMakeLists.txt  Test04.cxx  Test04.h
